@@ -39,7 +39,7 @@ try:
 except ImportError:
     pass
 
-APPLICATION_VERSION = 3.29
+APPLICATION_VERSION = 3.30
 
 HOTKEY_CTRL_G = '\x07'
 
